--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.3",
     "@types/react-loadable": "^5.5.6",
     "ahooks": "^3.3.10",
+    "antd": "^4.23.4",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "lodash.debounce": "^4.0.8",
